# data-preprocessing

./: .env.example  README.md  pyproject.toml
code/: add-diabetes-type-column-and-make-dataset.ipynb  merge_nhanes_any_batched.py  merge_nhanes_files.py  parquet_to_csv.py  perquet-to-csv.py
code/archive/: add-diabetes-type-column-and-make-dataset.ipynb  extract-nhanes-merged-column-names.ipynb
code/latest/: nhanes-diabetes-feature-engineering.ipynb  nhanes-diabetes-feature-selection-v3.ipynb  nhanes-diabetes-type-column-adding-v3.ipynb
data/: column-unique-data-counts.csv  merged_column_names.txt
